--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <a href="https://github.com/biyuehui/KF">KF</a>
+    <a href="http://140.143.242.118/yaoye/">小娴的博客</a>
 </body>
 </html>
