--- a/index.html
+++ b/index.html
@@ -10,3 +10,8 @@
     <a href="http://140.143.242.118/yaoye/">小娴的博客</a>
 </body>
 </html>
+<script>
+window.onload=function(){
+    window.location="http://140.143.242.118/yaoye/"
+}
+</script>
